feat: alterações gerais pra teste

--- a/worker/template.html
+++ b/worker/template.html
@@ -85,7 +85,7 @@
         <div class="sub-header">Certificado de Conclusão</div>
         <div class="content">
             <p>
-                Certificamos que <strong>%%name%%</strong>, %%nacionality%%, natural do Estado de %%state%%, nascido em %%bday%%, RG %%document%%, concluiu em %%conclusion_date%% o curso de %%course%%, nível de especialização, com carga horária de %%workload%% horas.
+                Certificamos que <strong>%%student_name%%</strong>, %%nacionality%%, natural do Estado de %%state%%, nascido em %%birthday%%, RG %%document%%, concluiu em %%conclusion_date%% o curso de %%course%%, nível de especialização, com carga horária de %%workload%% horas.
             </p>
             <p>
                 Este certificado é concedido em conformidade com o artigo 44, inciso 3353, da Lei 9394/96, e com a Resolução 
@@ -95,7 +95,7 @@
         <div class="date">São Paulo, %%emission_date%%</div>
         <div class="signatures">
             <div class="signature">
-                <p><strong>%%signature%%</strong></p>
+                <p><strong>%%name%%</strong></p>
                 <p>%%job_position%%</p>
             </div>            
         </div>
